Re-enabling the debug profile under console-reference and enduser-reference